--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <version>1.9.0-M1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.2.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
